# Copyright (c) Kyrylo Polezhaiev and contributors. All rights reserved.
# Released under the MIT license. See LICENSE file in the project root for full license information.

incdir = include_directories('../../bindings/cpp')

executable('logistic-regression-cpp', 'logistic-regression.cpp',
    include_directories: incdir,
    link_with: le,
    install: false
)