svm_py = configure_file(input : 'support-vector-machine.py',
                        output : 'support-vector-machine.py',
                        copy : true)

plr_py = configure_file(input : 'polynomial-logistic-regression.py',
                        output : 'polynomial-logistic-regression.py',
                        copy : true)
