svm_py = configure_file(input : 'support-vector-machine.py',
                        output : 'support-vector-machine.py',
                        copy : true)

plr_py = configure_file(input : 'polynomial-logistic-regression.py',
                        output : 'polynomial-logistic-regression.py',
                        copy : true)

snn_py = configure_file(input : 'shallow-neural-network.py',
                        output : 'shallow-neural-network.py',
                        copy : true)
