# Copyright (c) Kyrylo Polezhaiev and contributors. All rights reserved.
# Released under the MIT license. See LICENSE file in the project root for full license information.

tensorlist_sources = [
    'letensorlist.c'
]

tensorlist = static_library('le_tensorlist', tensorlist_sources,
    include_directories: inc,
    link_with: le,
)
